ci: lint and test are before_script
now if any return non-zero, build is failed immediately instead of building unnecessarily

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,11 @@ addons:
 install:
   - yarn install
 
-script:
+before_script:
   - ng lint --format stylish
   - ng test --watch false --single-run true --browsers ChromeHeadless
+
+script:
   - ng build --prod
 
 deploy:
